--- a/index.html
+++ b/index.html
@@ -50,18 +50,18 @@ var imgTouch = '';
 
 function zoomerIn() {
 
-  alert('imgTouch: ' +  imgTouch);
+  alert(imgTouch);
   $('.pagination-sd').css({ 'display':'none' });
   $('.swiper').css({        'display':'none' });
-  $('#zoomCont').css({      'display':'block' });
-  
+  // $('#zoomCont').css({      'display':'block' });
+
   $('#zoomCont').fadeIn( 500, function(){ 
     $('#zoomCont').append('<img onclick="javascript: zoomerOut();" src="imgTouch">');
   });
   // $('#zoomCont').css({ 'visibility':'visible' });
   // $('#zoomCont').html( '<img onclick="javascript: zoomerOut();" src="res/img/high_1.jpg">');
   // $('#zoomCont').html('<img onclick="javascript: zoomerOut();" src="imgTouch">');
-  $('#zoomCont').append(imgTouch);
+  // $('#zoomCont').append(imgTouch);
   // $('#zoomCont').css({ 'display':'block' });
 
 }//fin zoomeR()
@@ -69,9 +69,9 @@ function zoomerIn() {
 function zoomerOut() {
   // $('#zoomCont').css({ 'visibility':'hidden' });
   // $("#zoomCont img:last-child").remove();
-  $('#zoomCont').prepend('<img onclick="javascript: zoomerOut();" src="imgTouch">');
+  $('#zoomCont').prepend('img');
   // $('#zoomCont').css({      'display':'none' });
-  $('.swiper').fadeOut( 500, function(){ 
+  $('#zoomCont').fadeOut( 500, function(){ 
     $( ".swiper" ).fadeIn( 100 );
     $( ".pagination-sd" ).fadeIn( 100 );
     // $('.swiper').css({        'display':'block' });
