--- a/index.html
+++ b/index.html
@@ -57,8 +57,7 @@ function zoomerIn() {
   // $('body').css({           'background-image':'url("res/img/high_1.jpg")' });
   // $('#zoomCont').fadeIn(500);
   $('#zoomCont').css({ 'visibility':'visible' });
-  // $('#zoomCont').html( '<img onclick="javascript: zoomerOut();" src="res/img/high_1.jpg">');
-  $('#zoomCont').html( '<img onclick="javascript: zoomerOut();" src="imgTouch">');
+  $('#zoomCont').html( '<img onclick="javascript: zoomerOut();" src="res/img/high_1.jpg">');
 
   // if( zoomOn == false ){
       // $('.mc-control').removeClass('zoomImgOff')
