--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ var imgTouch = '';
 
 function zoomerIn() {
 
-  // alert('imgTouch: ' +  imgTouch);
+  alert('imgTouch: ' +  imgTouch);
   // $('.pagination-sd').css({ 'display':'none' });
   // $('.swiper').css({        'display':'none' });
   // $('body').css({           'background-image':'url("imgTouch")' });
