--- a/index.html
+++ b/index.html
@@ -91,7 +91,8 @@ $(document).ready(function() {
         <!-- <img onclick="javascript: imgTouch = this.attr.src; zoomerIn();" src="res/img/high_1.jpg"> -->
         <!-- <img onclick="javascript: imgTouch = $(this).attr('src'); zoomerIn();" src="res/img/high_1.jpg"> -->
         <!-- <img onclick="javascript: imgTouch = this.src; zoomerIn();" src="res/img/high_1.jpg"> -->
-        <img onclick="javascript: imgTouch = $(this).attr('src'); zoomerIn();" src="res/img/high_1.jpg">
+        <!-- <img onclick="javascript: imgTouch = $(this).attr('src'); zoomerIn();" src="res/img/high_1.jpg"> -->
+        <img onclick="javascript: imgTouch = this.getAttribute('src'); zoomerIn();" src="res/img/high_1.jpg">
       </div>
 
       <div class="swiper-slide">
