--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ function zoomerIn() {
   // $('#zoomCont').fadeIn(500);
   $('#zoomCont').css({ 'visibility':'visible' });
   // $('#zoomCont').html( '<img onclick="javascript: zoomerOut();" src="res/img/high_1.jpg">');
-  $('#zoomCont').html( '<img src="imgTouch" onclick="javascript: zoomerOut();">');
+  $('#zoomCont').html( '<img src="'+imgTouch+'" onclick="javascript: zoomerOut();">');
 
 }//fin zoomeR()
 
@@ -91,8 +91,8 @@ $(document).ready(function() {
         <!-- <img onclick="javascript: imgTouch = this.attr.src; zoomerIn();" src="res/img/high_1.jpg"> -->
         <!-- <img onclick="javascript: imgTouch = $(this).attr('src'); zoomerIn();" src="res/img/high_1.jpg"> -->
         <!-- <img onclick="javascript: imgTouch = this.src; zoomerIn();" src="res/img/high_1.jpg"> -->
-        <!-- <img onclick="javascript: imgTouch = $(this).attr('src'); zoomerIn();" src="res/img/high_1.jpg"> -->
-        <img onclick="javascript: imgTouch = this.getAttribute('src'); zoomerIn();" src="res/img/high_1.jpg">
+        <img onclick="javascript: imgTouch = $(this).attr('src'); zoomerIn();" src="res/img/high_1.jpg">
+        <!-- <img onclick="javascript: imgTouch = this.getAttribute('src'); zoomerIn();" src="res/img/high_1.jpg"> -->
       </div>
 
       <div class="swiper-slide">
