--- a/index.html
+++ b/index.html
@@ -50,27 +50,24 @@ var imgTouch = '';
 
 function zoomerIn() {
 
-  alert('imgTouch: ' +  imgTouch);
-  // $('.pagination-sd').css({ 'display':'none' });
-  // $('.swiper').css({        'display':'none' });
-  // $('body').css({           'background-image':'url("imgTouch")' });
-  // $('body').css({           'background-image':'url("res/img/high_1.jpg")' });
-  // $('#zoomCont').fadeIn(500);
+  // alert('imgTouch: ' +  imgTouch);
   $('#zoomCont').css({ 'visibility':'visible' });
-  // $('#zoomCont').html( '<img onclick="javascript: zoomerOut();" src="res/img/high_1.jpg">');
   $('#zoomCont').html( '<img src="'+imgTouch+'" onclick="javascript: zoomerOut();">');
 
-}//fin zoomeR()
+  var imgW = $('#zoomCont img').width();
+  var imgH = $('#zoomCont img').height();
+  alert('imgW: ' + imgW + ', imgH: ' + imgH);
+
+}//fin zoomerIn()
 
 function zoomerOut() {
+
   $("#zoomCont img:last-child").remove();
   $('#zoomCont').css({ 'visibility':'hidden' });
-  // $('.pagination-sd').css({ 'display':'block' });
-  // $('.swiper').css({        'display':'block' });
-}
+
+}//fin zoomerOut()
 
 $(document).ready(function() {
-// $(window).load(function() {
 
   // necesario para que wActual y hActual obtengan un valor en relación a la ventana del navegador
   $('.swiper-container').css({ 'height':altoP+'px' });
@@ -88,83 +85,79 @@ $(document).ready(function() {
     <div class="swiper-wrapper">
 
       <div class="swiper-slide">
-        <!-- <img onclick="javascript: imgTouch = this.attr.src; zoomerIn();" src="res/img/high_1.jpg"> -->
-        <!-- <img onclick="javascript: imgTouch = $(this).attr('src'); zoomerIn();" src="res/img/high_1.jpg"> -->
-        <!-- <img onclick="javascript: imgTouch = this.src; zoomerIn();" src="res/img/high_1.jpg"> -->
         <img onclick="javascript: imgTouch = $(this).attr('src'); zoomerIn();" src="res/img/high_1.jpg">
-        <!-- <img onclick="javascript: imgTouch = this.getAttribute('src'); zoomerIn();" src="res/img/high_1.jpg"> -->
       </div>
 
       <div class="swiper-slide">
-        <img src="res/img/high_2.jpg">
+        <img onclick="javascript: imgTouch = $(this).attr('src'); zoomerIn();" src="res/img/high_2.jpg">
       </div>
 
       <div class="swiper-slide">
-        <img src="res/img/high_3.jpg">
+        <img onclick="javascript: imgTouch = $(this).attr('src'); zoomerIn();" src="res/img/high_3.jpg">
       </div>
 
       <div class="swiper-slide">
-        <img src="res/img/high_4.jpg">
+        <img onclick="javascript: imgTouch = $(this).attr('src'); zoomerIn();" src="res/img/high_4.jpg">
       </div>
 
       <div class="swiper-slide">
-        <img src="res/img/high_5.jpg">
+        <img onclick="javascript: imgTouch = $(this).attr('src'); zoomerIn();" src="res/img/high_5.jpg">
       </div>
 
       <div class="swiper-slide">
-        <img src="res/img/high_6.jpg">
+        <img onclick="javascript: imgTouch = $(this).attr('src'); zoomerIn();" src="res/img/high_6.jpg">
       </div>
 
       <div class="swiper-slide">
-        <img src="res/img/high_7.jpg">
+        <img onclick="javascript: imgTouch = $(this).attr('src'); zoomerIn();" src="res/img/high_7.jpg">
       </div>
 
       <div class="swiper-slide">
-        <img src="res/img/high_8.jpg">
+        <img onclick="javascript: imgTouch = $(this).attr('src'); zoomerIn();" src="res/img/high_8.jpg">
       </div>
 
       <div class="swiper-slide">
-        <img src="res/img/high_9.jpg">
+        <img onclick="javascript: imgTouch = $(this).attr('src'); zoomerIn();" src="res/img/high_9.jpg">
       </div>
 
       <div class="swiper-slide">
-        <img src="res/img/high_11.jpg">
+        <img onclick="javascript: imgTouch = $(this).attr('src'); zoomerIn();" src="res/img/high_11.jpg">
       </div>
 
       <div class="swiper-slide">
-        <img src="res/img/high_12.jpg">
+        <img onclick="javascript: imgTouch = $(this).attr('src'); zoomerIn();" src="res/img/high_12.jpg">
       </div>
 
       <div class="swiper-slide">
-        <img src="res/img/high_13.jpg">
+        <img onclick="javascript: imgTouch = $(this).attr('src'); zoomerIn();" src="res/img/high_13.jpg">
       </div>
 
       <div class="swiper-slide">
-        <img src="res/img/high_14.jpg">
+        <img onclick="javascript: imgTouch = $(this).attr('src'); zoomerIn();" src="res/img/high_14.jpg">
       </div>
 
       <div class="swiper-slide">
-        <img src="res/img/high_17.jpg">
+        <img onclick="javascript: imgTouch = $(this).attr('src'); zoomerIn();" src="res/img/high_17.jpg">
       </div>
 
       <div class="swiper-slide">
-        <img src="res/img/high_18.jpg">
+        <img onclick="javascript: imgTouch = $(this).attr('src'); zoomerIn();" src="res/img/high_18.jpg">
       </div>
 
       <div class="swiper-slide">
-        <img src="res/img/high_19.jpg">
+        <img onclick="javascript: imgTouch = $(this).attr('src'); zoomerIn();" src="res/img/high_19.jpg">
       </div>
 
       <div class="swiper-slide">
-        <img src="res/img/high_20.jpg">
+        <img onclick="javascript: imgTouch = $(this).attr('src'); zoomerIn();" src="res/img/high_20.jpg">
       </div>
 
       <div class="swiper-slide">
-        <img src="res/img/high_21.jpg">
+        <img onclick="javascript: imgTouch = $(this).attr('src'); zoomerIn();" src="res/img/high_21.jpg">
       </div>
 
       <div class="swiper-slide">
-        <img src="res/img/high_22.jpg">
+        <img onclick="javascript: imgTouch = $(this).attr('src'); zoomerIn();" src="res/img/high_22.jpg">
       </div>
 
     </div><!-- /.swiper-wrapper -->
