--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@ function zoomerIn() {
   $('#zoomCont').css({ 'width' : imgW });
   $('#zoomCont').css({ 'height': imgH });
 
-  $('#zoomCont').css({ 'top': imgH / 2 });
-  $('#zoomCont').css({ 'top': imgW / 2 });
+  $('#zoomCont').css({ 'margin-top':  imgH / 2 });
+  $('#zoomCont').css({ 'margin-left': imgW / 2 });
 
 }//fin zoomerIn()
 
