--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@ var altoP = alto - 25;//-25 alto paginacion
 function zoomerIn() {
 
   alert('zoomerIn');
-  $('.swiper-wrapper').css({ 'width':'auto' });
-  $("swiper").removeClass("swiper-dynamics");
-  $("swiper").removeClass("zoomImgOff");
-  $("swiper").addClass("zoomImgOn");
+  $(".swiper-wrapper").css({ 'width':'auto !important' });
+  $(".swiper").removeClass("swiper-dynamics");
+  $(".swiper").removeClass("zoomImgOff");
+  $(".swiper").addClass("zoomImgOn");
 
 }//fin zoomerIn()
 
