--- a/index.html
+++ b/index.html
@@ -48,12 +48,13 @@ var altoP = alto - 25;//-25 alto paginacion
 function zoomerIn() {
 
   // alert('zoomerIn');
+
+  $(".swiper-container").css({ 'overflow':'scroll' });
+  $(".swiper-wrapper").css({ 'width':'auto !important' });
   var imgW = $('.swiper-slide img').width();
   var imgH = $('.swiper-slide img').height();
   alert('imgW: ' + imgW + ', imgH: ' + imgH);
-
-  $(".swiper-container").css({ 'overflow':'scroll' });
-  // $(".swiper-wrapper").css({ 'width':'auto !important' });
+  
   $(".swiper-wrapper").css({ 'width':'imgW'+'px' });
   $(".swiper-wrapper").css({ 'height':'imgH'+'px' });
   $(".pagination-sd").css({ 'display':'none' });
