--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@ function zoomerIn() {
   $(".swiper-container").css({ 'height': imgH + 'px' });
   $(".swiper-wrapper").css({   'width' : imgW + 'px' });
   $(".swiper-wrapper").css({   'height': imgH + 'px' });
+  $(".swiper-slide").css({     'width' : imgW + 'px' });
+  $(".swiper-slide").css({     'height': imgH + 'px' });
   // $(".swiper-wrapper").css({ 'width' : '1080px' });
   // $(".swiper-wrapper").css({ 'height': '1920px' });
 
