--- a/index.html
+++ b/index.html
@@ -50,8 +50,10 @@ function zoomerIn() {
   // alert('zoomerIn');
 
   $(".swiper-wrapper").css({ 'width':'auto !important' });
-  var imgW = $('.swiper-slide img').width();
-  var imgH = $('.swiper-slide img').height();
+  // var imgW = $('.swiper-slide img').width();
+  // var imgH = $('.swiper-slide img').height();
+  var imgW = 1080;
+  var imgH = 1920;
   alert('imgW: ' + imgW + ', imgH: ' + imgH);
 
   $(".swiper-container").css({ 'width' : imgW + 'px' });
