--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ function zoomerIn() {
   $(".swiper-container").css({ 'overflow':'scroll' });
   $(".pagination-sd").css({ 'display':'none' });
   
-  $(".swiper").removeClass("swiper-dynamics");
+  $(".swiper").removeClass("swiper-dynamic");
   $(".swiper").removeClass("zoomImgOff");
   $(".swiper").addClass("zoomImgOn");
 
