--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@ function zoomerIn() {
   var imgH = 1920;
   alert('imgW: ' + imgW + ', imgH: ' + imgH);
 
-  $(".swiper-container").css({ 'width' : imgW + 'px' });
-  $(".swiper-container").css({ 'height': imgH + 'px' });
-  $(".swiper-wrapper").css({   'width' : imgW + 'px' });
-  $(".swiper-wrapper").css({   'height': imgH + 'px' });
+  // $(".swiper-container").css({ 'width' : imgW + 'px' });
+  // $(".swiper-container").css({ 'height': imgH + 'px' });
+  // $(".swiper-wrapper").css({   'width' : imgW + 'px' });
+  // $(".swiper-wrapper").css({   'height': imgH + 'px' });
   $(".swiper-slide").css({     'width' : imgW + 'px' });
   $(".swiper-slide").css({     'height': imgH + 'px' });
   $(".swiper-slide img").css({ 'width' : imgW + 'px' });
