--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 <!--[if gt IE 8]><!-->
 <html class="no-js" lang="en">
 <!--<![endif]-->
-
 <head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -19,8 +18,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=2.5, user-scalable=1"> -->
 <!-- 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=2.5, user-scalable=true"> -->
-<!--  -->
-<meta name='viewport' content='width=device-width, initial-scale=1, user-scalable=yes' />
+<!-- 
+<meta name='viewport' content='width=device-width, initial-scale=1, user-scalable=yes' /> -->
 
 
 <link rel="stylesheet" href="css/idangerous.swiper.css">
@@ -28,6 +27,9 @@
 <link rel="stylesheet" href="css/swiper-demos.css?v=1.8">
 
 <script src="js/libs/jquery-1.7.1.min.js"></script>
+
+<!-- double doubletap
+<script src="js/libs/jquery.finger.js"></script> -->
 
 <!-- Swiper -->
 <script src="js/idangerous.swiper-1.8.min.js"></script>
@@ -38,165 +40,125 @@
 
 <script type="text/javascript">
 
-// var ancho = $(window).width();
-var alto  = $(window).height();
-var altoP = alto - 25;//-25 alto paginacion
+  // var ancho = $(window).width();
+  var alto  = $(window).height();
+  var altoP = alto - 25;//-25 alto paginacion
+  // var zoomOn   = false;
 
-// var zoomOn   = false;
-// var imgTouch = '';
+  var imgTouch = '';
+  function zoomerIn() {
 
-function zoomerIn() {
+    // alert('imgTouch: ' +  imgTouch);
+    $('#zoomCont').css({ 'visibility':'visible' });
+    $('#zoomCont').html( '<img src="'+imgTouch+'" onclick="javascript: zoomerOut();">');
+    var imgW = $('#zoomCont img').width();
+    var imgH = $('#zoomCont img').height();
+    // alert('imgW: ' + imgW + ', imgH: ' + imgH);
+    $('#zoomCont').css({ 'width' : imgW });
+    $('#zoomCont').css({ 'height': imgH });
+    $('#zoomCont').css({ 'margin-top':  imgH / 2 });
+    $('#zoomCont').css({ 'margin-left': imgW / 2 });
 
-<<<<<<< HEAD
-<<<<<<< HEAD
-  // alert('imgTouch: ' +  imgTouch);
-  $('#zoomCont').css({ 'visibility':'visible' });
-  $('#zoomCont').html( '<img src="'+imgTouch+'" onclick="javascript: zoomerOut();">');
+  }//fin zoomerIn()
 
-  var imgW = $('#zoomCont img').width();
-  var imgH = $('#zoomCont img').height();
-  // alert('imgW: ' + imgW + ', imgH: ' + imgH);
-  
-  $('#zoomCont').css({ 'width' : imgW });
-  $('#zoomCont').css({ 'height': imgH });
+  function zoomerOut() {
 
-  $('#zoomCont').css({ 'margin-top':  imgH / 2 });
-  $('#zoomCont').css({ 'margin-left': imgW / 2 });
-=======
-=======
->>>>>>> origin/master
-  // alert('zoomerIn');
+    $("#zoomCont img:last-child").remove();
+    $('#zoomCont').css({ 'visibility':'hidden' });
 
-  $(".swiper-wrapper").css({ 'width':'auto !important' });
-  // var imgW = $('.swiper-slide img').width();
-  // var imgH = $('.swiper-slide img').height();
-  var imgW = 1080;
-  var imgH = 1920;
-  alert('imgW: ' + imgW + ', imgH: ' + imgH);
+  }//fin zoomerOut()
 
-  // $(".swiper-container").css({ 'width' : imgW + 'px' });
-  // $(".swiper-container").css({ 'height': imgH + 'px' });
-  // $(".swiper-wrapper").css({   'width' : imgW + 'px' });
-  // $(".swiper-wrapper").css({   'height': imgH + 'px' });
-  $(".swiper-slide").css({     'width' : imgW + 'px' });
-  $(".swiper-slide").css({     'height': imgH + 'px' });
-  $(".swiper-slide img").css({ 'width' : imgW + 'px' });
-  $(".swiper-slide img").css({ 'height': imgH + 'px' });
-  // $(".swiper-wrapper").css({ 'width' : '1080px' });
-  // $(".swiper-wrapper").css({ 'height': '1920px' });
+  $(document).ready(function() {
+    
+    // necesario para que wActual y hActual obtengan un valor en relación a la ventana del navegador
+    $('.swiper-container').css({ 'height':altoP+'px' });
+    $('.swiper-slide').css({     'height':altoP+'px' });
+    $('.swiper-slide img').css({ 'height':altoP+'px' });
 
-  $(".swiper-container").css({ 'overflow':'scroll' });
-  $(".pagination-sd").css({ 'display':'none' });
-  
-  $(".swiper").removeClass("swiper-dynamic");
-  $(".swiper").removeClass("zoomImgOff");
-  $(".swiper").addClass("zoomImgOn");
-<<<<<<< HEAD
->>>>>>> origin/master
-=======
->>>>>>> origin/master
-
-}//fin zoomerIn()
-
-function zoomerOut() {
-
-  // $("#zoomCont img:last-child").remove();
-  // $('#zoomCont').css({ 'visibility':'hidden' });
-  $(".pagination-sd").css({ 'display':'block' });
-
-}//fin zoomerOut()
-
-$(document).ready(function() {
-
-  // necesario para que wActual y hActual obtengan un valor en relación a la ventana del navegador
-  $('.swiper-container').css({ 'height':altoP+'px' });
-  $('.swiper-slide').css({     'height':altoP+'px' });
-  $('.swiper-slide img').css({ 'height':altoP+'px' });
-
-});// fin $(documen).ready
+  });// fin $(documen).ready
 
 </script>
 
 </head>
 <body>
 
-  <div class="swiper-container swiper-dynamic swiper zoomImgOff"> <!-- touch -->
+  <div class="swiper-container swiper-dynamic swiper"> <!-- touch -->
     <div class="swiper-wrapper">
 
       <div class="swiper-slide">
-        <img onclick="javascript: zoomerIn();" src="res/img/high_1.jpg">
+        <img onclick="javascript: imgTouch = $(this).attr('src'); zoomerIn();" src="res/img/high_1.jpg">
       </div>
 
       <div class="swiper-slide">
-        <img onclick="javascript: zoomerIn();" src="res/img/high_2.jpg">
+        <img onclick="javascript: imgTouch = $(this).attr('src'); zoomerIn();" src="res/img/high_2.jpg">
       </div>
 
       <div class="swiper-slide">
-        <img onclick="javascript: zoomerIn();" src="res/img/high_3.jpg">
+        <img onclick="javascript: imgTouch = $(this).attr('src'); zoomerIn();" src="res/img/high_3.jpg">
       </div>
 
       <div class="swiper-slide">
-        <img onclick="javascript: zoomerIn();" src="res/img/high_4.jpg">
+        <img onclick="javascript: imgTouch = $(this).attr('src'); zoomerIn();" src="res/img/high_4.jpg">
       </div>
 
       <div class="swiper-slide">
-        <img onclick="javascript: zoomerIn();" src="res/img/high_5.jpg">
+        <img onclick="javascript: imgTouch = $(this).attr('src'); zoomerIn();" src="res/img/high_5.jpg">
       </div>
 
       <div class="swiper-slide">
-        <img onclick="javascript: zoomerIn();" src="res/img/high_6.jpg">
+        <img onclick="javascript: imgTouch = $(this).attr('src'); zoomerIn();" src="res/img/high_6.jpg">
       </div>
 
       <div class="swiper-slide">
-        <img onclick="javascript: zoomerIn();" src="res/img/high_7.jpg">
+        <img onclick="javascript: imgTouch = $(this).attr('src'); zoomerIn();" src="res/img/high_7.jpg">
       </div>
 
       <div class="swiper-slide">
-        <img onclick="javascript: zoomerIn();" src="res/img/high_8.jpg">
+        <img onclick="javascript: imgTouch = $(this).attr('src'); zoomerIn();" src="res/img/high_8.jpg">
       </div>
 
       <div class="swiper-slide">
-        <img onclick="javascript: zoomerIn();" src="res/img/high_9.jpg">
+        <img onclick="javascript: imgTouch = $(this).attr('src'); zoomerIn();" src="res/img/high_9.jpg">
       </div>
 
       <div class="swiper-slide">
-        <img onclick="javascript: zoomerIn();" src="res/img/high_11.jpg">
+        <img onclick="javascript: imgTouch = $(this).attr('src'); zoomerIn();" src="res/img/high_11.jpg">
       </div>
 
       <div class="swiper-slide">
-        <img onclick="javascript: zoomerIn();" src="res/img/high_12.jpg">
+        <img onclick="javascript: imgTouch = $(this).attr('src'); zoomerIn();" src="res/img/high_12.jpg">
       </div>
 
       <div class="swiper-slide">
-        <img onclick="javascript: zoomerIn();" src="res/img/high_13.jpg">
+        <img onclick="javascript: imgTouch = $(this).attr('src'); zoomerIn();" src="res/img/high_13.jpg">
       </div>
 
       <div class="swiper-slide">
-        <img onclick="javascript: zoomerIn();" src="res/img/high_14.jpg">
+        <img onclick="javascript: imgTouch = $(this).attr('src'); zoomerIn();" src="res/img/high_14.jpg">
       </div>
 
       <div class="swiper-slide">
-        <img onclick="javascript: zoomerIn();" src="res/img/high_17.jpg">
+        <img onclick="javascript: imgTouch = $(this).attr('src'); zoomerIn();" src="res/img/high_17.jpg">
       </div>
 
       <div class="swiper-slide">
-        <img onclick="javascript: zoomerIn();" src="res/img/high_18.jpg">
+        <img onclick="javascript: imgTouch = $(this).attr('src'); zoomerIn();" src="res/img/high_18.jpg">
       </div>
 
       <div class="swiper-slide">
-        <img onclick="javascript: zoomerIn();" src="res/img/high_19.jpg">
+        <img onclick="javascript: imgTouch = $(this).attr('src'); zoomerIn();" src="res/img/high_19.jpg">
       </div>
 
       <div class="swiper-slide">
-        <img onclick="javascript: zoomerIn();" src="res/img/high_20.jpg">
+        <img onclick="javascript: imgTouch = $(this).attr('src'); zoomerIn();" src="res/img/high_20.jpg">
       </div>
 
       <div class="swiper-slide">
-        <img onclick="javascript: zoomerIn();" src="res/img/high_21.jpg">
+        <img onclick="javascript: imgTouch = $(this).attr('src'); zoomerIn();" src="res/img/high_21.jpg">
       </div>
 
       <div class="swiper-slide">
-        <img onclick="javascript: zoomerIn();" src="res/img/high_22.jpg">
+        <img onclick="javascript: imgTouch = $(this).attr('src'); zoomerIn();" src="res/img/high_22.jpg">
       </div>
 
     </div><!-- /.swiper-wrapper -->
@@ -204,7 +166,7 @@ $(document).ready(function() {
 
   <div class="pagination-sd"></div>
 
-  <!-- <div id="zoomCont"></div> -->
+  <div id="zoomCont"></div>
 
 </body>
 </html>
