--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@ function zoomerIn() {
   $('#zoomCont').css({ 'width' : imgW });
   $('#zoomCont').css({ 'height': imgH });
 
-  // $('#zoomCont').css({ 'top' : imgH / 2 });
-  // $('#zoomCont').css({ 'left': imgW / 2 });
-  $('#zoomCont').css({ 'margin-top' : -imgH / 2 });
-  $('#zoomCont').css({ 'margin-left': -imgW / 2 });
+  $('#zoomCont').css({ 'top' : -imgH / 2 });
+  $('#zoomCont').css({ 'left': -imgW / 2 });
+  // $('#zoomCont').css({ 'margin-top' : -imgH / 2 });
+  // $('#zoomCont').css({ 'margin-left': -imgW / 2 });
 
 }//fin zoomerIn()
 
