--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@ function zoomerIn() {
   $('#zoomCont').css({ 'width' : imgW });
   $('#zoomCont').css({ 'height': imgH });
 
+  $('#zoomCont').css({ 'top' : '0px' });
+  $('#zoomCont').css({ 'left': '0px' });
   $('#zoomCont img').css({ 'top' : -imgH / 2 });
   $('#zoomCont img').css({ 'left': -imgW / 2 });
 
