--- a/index.html
+++ b/index.html
@@ -57,16 +57,12 @@ function zoomerIn() {
   var imgW = $('#zoomCont img').width();
   var imgH = $('#zoomCont img').height();
   // alert('imgW: ' + imgW + ', imgH: ' + imgH);
+
   $('#zoomCont').css({ 'width' : imgW });
   $('#zoomCont').css({ 'height': imgH });
 
   $('#zoomCont img').css({ 'top' : -imgH / 2 });
   $('#zoomCont img').css({ 'left': -imgW / 2 });
-
-  // $('#zoomCont').css({ 'top' : -imgH / 2 });
-  // $('#zoomCont').css({ 'left': -imgW / 2 });
-  // $('#zoomCont').css({ 'margin-top' : -imgH / 2 });
-  // $('#zoomCont').css({ 'margin-left': -imgW / 2 });
 
 }//fin zoomerIn()
 
@@ -74,6 +70,8 @@ function zoomerOut() {
 
   $("#zoomCont img:last-child").remove();
   $('#zoomCont').css({ 'visibility':'hidden' });
+
+  this.moveTo(0, 100);
 
 }//fin zoomerOut()
 
