--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@ function zoomerIn() {
   $('#zoomCont').css({ 'width' : imgW });
   $('#zoomCont').css({ 'height': imgH });
 
-  $('#zoomCont img').css({ 'top' : -imgH / 2 });
-  $('#zoomCont img').css({ 'left': -imgW / 2 });
+  // $('#zoomCont img').css({ 'top' : -imgH / 2 });
+  // $('#zoomCont img').css({ 'left': -imgW / 2 });
 
 }//fin zoomerIn()
 
