--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@ function zoomerOut() {
   // $('#zoomCont').css({ 'visibility':'hidden' });
   $('#zoomCont').css({ 'display':'none' });
 
+  window.moveTo(0, 100);
+
 }//fin zoomerOut()
 
 $(document).ready(function() {
