--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@ function zoomerIn() {
   var imgH = $('#zoomCont img').height();
   // alert('imgW: ' + imgW + ', imgH: ' + imgH);
 
-  $('#zoomCont').css({ 'width' : imgW });
-  $('#zoomCont').css({ 'height': imgH });
+  // $('#zoomCont').css({ 'width' : imgW });
+  // $('#zoomCont').css({ 'height': imgH });
 
   // $('#zoomCont img').css({ 'top' : -imgH / 2 });
   // $('#zoomCont img').css({ 'left': -imgW / 2 });
