--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@ var imgTouch = '';
 function zoomerIn() {
 
   // alert('imgTouch: ' +  imgTouch);
-  // $('#zoomCont').css({ 'visibility':'visible' });//luego de zoom pantalla queda gigante y no retorna
-  $('#zoomCont').css({ 'display':'block' });
+  $('#zoomCont').css({ 'visibility':'visible' });//luego de zoom pantalla queda gigante y no retorna
+  // $('#zoomCont').css({ 'display':'block' });
   $('#zoomCont').html( '<img src="'+imgTouch+'" onclick="javascript: zoomerOut();">');
 
   var imgW = $('#zoomCont img').width();
@@ -70,10 +70,10 @@ function zoomerIn() {
 function zoomerOut() {
 
   $("#zoomCont img:last-child").remove();
-  // $('#zoomCont').css({ 'visibility':'hidden' });
-  $('#zoomCont').css({ 'display':'none' });
+  $('#zoomCont').css({ 'visibility':'hidden' });
+  // $('#zoomCont').css({ 'display':'none' });
 
-  window.moveTo(0, 100);
+  // window.moveTo(0, 100);
 
 }//fin zoomerOut()
 
